--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "purescript": "^0.14.5",
+    "purs-loader": "^3.7.2",
+    "spago": "^0.20.7"
   }
 }
