--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.3",
+    "craco-purescript-loader": "andys8/craco-purescript-loader#cra-v5",
     "@juggle/resize-observer": "^3.3.1",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.7.2",
